--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -35,11 +35,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:padding="10dp"
+        android:background="@drawable/custom_no_button"
+        android:backgroundTint="@color/grey"
         android:fontFamily="@font/product_sans_regular"
         android:gravity="center"
-        android:text="No"
-        android:background="@drawable/custom_no_button"
+        android:padding="10dp"
+        android:text="@string/dialog_no"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/tvNoteQuestion" />
 
     <TextView
@@ -49,11 +52,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:padding="10dp"
         android:background="@drawable/custom_yes_button"
         android:fontFamily="@font/product_sans_regular"
         android:gravity="center"
-        android:text="Yes"
+        android:padding="10dp"
+        android:text="@string/dialog_yes"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/btnNo" />
 
 
