--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -10,15 +10,15 @@
         android:id="@+id/etNoteTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/margin_start_16"
+        android:layout_marginTop="@dimen/margin_top_20"
+        android:layout_marginEnd="@dimen/margin_end_25"
         android:autofillHints="name"
         android:background="@drawable/custom_text_background"
         android:fontFamily="@font/product_sans_regular"
         android:hint="@string/note_title"
         android:inputType="text"
-        android:padding="16dp"
+        android:padding="@dimen/padding_16"
         app:layout_constraintBottom_toTopOf="@+id/etNoteSubTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,15 +28,15 @@
         android:id="@+id/etNoteSubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/margin_start_16"
+        android:layout_marginTop="@dimen/margin_top_16"
+        android:layout_marginEnd="@dimen/margin_end_25"
         android:autofillHints="name"
         android:background="@drawable/custom_text_background"
         android:fontFamily="@font/product_sans_regular"
         android:hint="@string/note_subtitle"
         android:inputType="text"
-        android:padding="16dp"
+        android:padding="@dimen/padding_16"
         app:layout_constraintBottom_toTopOf="@+id/tvPriority"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,13 +46,13 @@
         android:id="@+id/tvPriority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/margin_start_20"
+        android:layout_marginTop="@dimen/margin_top_20"
         android:fontFamily="@font/product_sans_regular"
-        android:padding="16dp"
+        android:padding="@dimen/padding_16"
         android:text="@string/note_priority"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18"
         app:layout_constraintBottom_toTopOf="@id/etNoteBody"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etNoteSubTitle"
@@ -60,8 +60,8 @@
 
     <ImageView
         android:id="@+id/ivGreenPriority"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/width_30"
+        android:layout_height="@dimen/height_30"
         android:background="@drawable/custom_green_shape"
         android:contentDescription="@string/green_priority"
         app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
@@ -71,9 +71,9 @@
 
     <ImageView
         android:id="@+id/ivYellowPriority"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="@dimen/width_30"
+        android:layout_height="@dimen/height_30"
+        android:layout_marginStart="@dimen/margin_start_20"
         android:background="@drawable/custom_yellow_shape"
         android:contentDescription="@string/yellow_priority"
         app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
@@ -82,9 +82,9 @@
 
     <ImageView
         android:id="@+id/ivRedPriority"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="@dimen/width_30"
+        android:layout_height="@dimen/height_30"
+        android:layout_marginStart="@dimen/margin_start_20"
         android:background="@drawable/custom_red_shape"
         android:contentDescription="@string/red_priority"
         app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
@@ -94,31 +94,31 @@
     <EditText
         android:id="@+id/etNoteBody"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="25dp"
+        android:layout_height="@dimen/height_300"
+        android:layout_marginStart="@dimen/margin_start_16"
+        android:layout_marginTop="@dimen/margin_top_16"
+        android:layout_marginEnd="@dimen/margin_end_25"
         android:autofillHints="name"
         android:background="@drawable/custom_text_background"
         android:fontFamily="@font/product_sans_regular"
         android:gravity="start"
         android:hint="@string/note_body"
         android:inputType="text"
-        android:padding="16dp"
+        android:padding="@dimen/padding_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPriority" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fbCreateNote"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="45dp"
+        android:layout_width="@dimen/width_70"
+        android:layout_height="@dimen/height_60"
+        android:layout_marginEnd="@dimen/margin_end_25"
+        android:layout_marginBottom="@dimen/margin_bottom_45"
         android:backgroundTint="@color/red"
         android:contentDescription="@string/floating_action_button_add_note"
         android:src="@drawable/ic_done"
-        app:fabCustomSize="60dp"
+        app:fabCustomSize="@dimen/custom_size_60"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
