--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/viewDialogDelete"
-        android:layout_width="130dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="@dimen/width_130"
+        android:layout_height="@dimen/height_2"
+        android:layout_marginTop="@dimen/margin_top_20"
         android:contentDescription="@string/delete_bar"
         android:src="@drawable/custom_bar_shape"
         app:layout_constraintBottom_toTopOf="@+id/tvNoteQuestion"
@@ -20,10 +20,10 @@
         android:id="@+id/tvNoteQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_top_10"
         android:fontFamily="@font/product_sans_regular"
         android:text="@string/note_delete_question"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewDialogDelete" />
@@ -32,14 +32,14 @@
         android:id="@+id/btnNo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/margin_start_20"
+        android:layout_marginTop="@dimen/margin_top_20"
+        android:layout_marginEnd="@dimen/margin_end_20"
         android:background="@drawable/custom_no_button"
         android:backgroundTint="@color/grey"
         android:fontFamily="@font/product_sans_regular"
         android:gravity="center"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:text="@string/dialog_no"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -49,13 +49,13 @@
         android:id="@+id/btnYes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/margin_start_20"
+        android:layout_marginTop="@dimen/margin_top_10"
+        android:layout_marginEnd="@dimen/margin_end_20"
         android:background="@drawable/custom_yes_button"
         android:fontFamily="@font/product_sans_regular"
         android:gravity="center"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:text="@string/dialog_yes"
         android:textColor="@color/white"
         android:textStyle="bold"
