--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/note_filter"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:src="@drawable/ic_filter"
         app:layout_constraintBottom_toTopOf="@+id/rvNote"
         app:layout_constraintStart_toStartOf="parent" />
@@ -21,14 +21,14 @@
         android:id="@+id/tvFilterHigh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="@dimen/margin_start_30"
         android:background="@drawable/custom_filter_button"
         android:backgroundTint="@color/red"
         android:fontFamily="@font/product_sans_regular"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:text="@string/priority_high"
         android:textAllCaps="false"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_14"
         app:layout_constraintBottom_toTopOf="@+id/rvNote"
         app:layout_constraintEnd_toStartOf="@+id/tvFilterMedium"
         app:layout_constraintStart_toEndOf="@+id/ivFilter" />
@@ -37,14 +37,14 @@
         android:id="@+id/tvFilterMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/margin_start_20"
         android:background="@drawable/custom_text_background"
         android:backgroundTint="@color/yellow"
         android:fontFamily="@font/product_sans_regular"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:text="@string/priority_medium"
         android:textAllCaps="false"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_14"
         app:layout_constraintBottom_toTopOf="@+id/rvNote"
         app:layout_constraintEnd_toStartOf="@+id/tvFilterLow"
         app:layout_constraintStart_toEndOf="@+id/tvFilterHigh" />
@@ -53,15 +53,15 @@
         android:id="@+id/tvFilterLow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/margin_start_20"
         android:background="@drawable/custom_text_background"
         android:backgroundTint="@color/green"
         android:fontFamily="@font/product_sans_regular"
-        android:padding="10dp"
+        android:padding="@dimen/padding_10"
         android:textAlignment="center"
         android:text="@string/priority_low"
         android:textAllCaps="false"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_14"
         app:layout_constraintBottom_toTopOf="@+id/rvNote"
         app:layout_constraintStart_toEndOf="@+id/tvFilterMedium" />
 
@@ -69,21 +69,21 @@
         android:id="@+id/rvNote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/margin_end_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivFilter" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fbAddNote"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="45dp"
+        android:layout_width="@dimen/width_70"
+        android:layout_height="@dimen/height_60"
+        android:layout_marginEnd="@dimen/margin_end_25"
+        android:layout_marginBottom="@dimen/margin_bottom_45"
         android:backgroundTint="@color/red"
         android:contentDescription="@string/floating_action_button_add_note"
         android:src="@drawable/ic_add"
-        app:fabCustomSize="60dp"
+        app:fabCustomSize="@dimen/custom_size_60"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
