--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/btnDelete"
         android:icon="@drawable/ic_delete"
         android:iconTint="@color/white"
-        android:title="Delete"
-        app:showAsAction="always" />
+        android:title="@string/menu_delete_title"
+        app:showAsAction="always"
+        tools:targetApi="o" />
 </menu>
