--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,8 +7,8 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.notesapp.ui.home.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="@string/fragment_home_name"
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_updateNoteFragment"
             app:destination="@id/updateNoteFragment" />
@@ -19,8 +19,8 @@
     <fragment
         android:id="@+id/createNoteFragment"
         android:name="com.example.notesapp.ui.create.CreateNoteFragment"
-        android:label="fragment_create_note"
-        tools:layout="@layout/fragment_create_note" >
+        android:label="@string/fragment_create_note"
+        tools:layout="@layout/fragment_create_note">
         <action
             android:id="@+id/action_createNoteFragment_to_homeFragment2"
             app:destination="@id/homeFragment" />
@@ -28,8 +28,8 @@
     <fragment
         android:id="@+id/updateNoteFragment"
         android:name="com.example.notesapp.ui.update.UpdateNoteFragment"
-        android:label="fragment_update_note"
-        tools:layout="@layout/fragment_update_note" >
+        android:label="@string/fragment_update_note"
+        tools:layout="@layout/fragment_update_note">
         <action
             android:id="@+id/action_updateNoteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
